# duct.rs

./: .travis.yml  .travis_code_coverage.sh  Cargo.toml  README.md  README.tpl  appveyor.yml
.github/workflows/: ci.yml
duct_sh/: Cargo.toml  README.md
duct_sh/src/: lib.rs
src/: env_name_str.rs  lib.rs  pipe.rs  shared_thread.rs  test.rs  unix.rs
test/cat/: Cargo.toml  README
test/cat/src/: main.rs
test/echo/: Cargo.toml  README
test/exe_in_dir/: Cargo.toml
test/exe_in_dir/src/: main.rs
test/print_env/: Cargo.toml
test/pwd/: Cargo.toml  README
test/status/: Cargo.toml  README
test/status/src/: main.rs
test/x_to_y/: Cargo.toml  README
