[package]
name = "duct"
version = "0.13.3"
authors = ["oconnor663@gmail.com"]
description = "a library for running child processes"
repository = "https://github.com/oconnor663/duct.rs"
documentation = "https://docs.rs/duct"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
os_pipe = "0.9.0"
shared_child = "0.3.4"
once_cell = "1.0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.43"

[dev-dependencies]
tempdir = "0.3.7"
