[package]
name = "duct_sh"
version = "0.13.4"
authors = ["oconnor663@gmail.com"]
description = "a sub-crate for the sh function, formerly in duct"
repository = "https://github.com/oconnor663/duct.rs/tree/master/duct_sh"
documentation = "https://docs.rs/duct_sh"
license = "MIT"

[dependencies]
duct = { path = "../", version = "0.13" }
