[package]
name = "duct_sh"
version = "1.0.0"
authors = ["oconnor663@gmail.com"]
description = "a sub-crate for the sh function, formerly in duct"
repository = "https://github.com/oconnor663/duct.rs/tree/master/duct_sh"
documentation = "https://docs.rs/duct_sh"
license = "MIT"
edition = "2021"

[dependencies]
duct = { path = "../", version = "1" }
